* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 0.13.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Wed Feb 07 2024 Mike Riddle <mike@sicura.us> - 0.12.0
- [puppetsync] Update metadata upper bounds for puppet-nsswitch, puppet-gitlab, puppet-snmp, simp-pam, and simp-useradd

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.11.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 0.10.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Sep 28 2023 Steven Pritchard <steve@sicura.us> - 0.9.0
- Add AlmaLinux 8 support

* Mon Sep 25 2023 Steven Pritchard <steve@sicura.us> - 0.8.1
- Remove `hash()` function to support stdlib 9
- Update module dependencies

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
- Add RockyLinux 8 support

* Fri Jun 03 2022 Trevor Vaughan <trevor@sicura.us> - 0.7.1
- Allow `puppet/chrony` < `3.0.0`
- Allow `puppet/gitlab` < `9.0.0`
- Allow `puppetlabs/stdlib` < `9.0.0`
- Bump latest tested GitLab CE version to 15.0.1

* Tue Jun 22 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 0.7.0
- Removed
  - Dropped support for Puppet 5
- Changed
  - `simp_gitlab::allow_fips` now defaults to true, as the last version of
     GitLab this module was tested with, 14.0.0, supports FIPS mode.
     - This will allow new GitLab installations on servers for which FIPS-mode
       is enabled, but not affect existing GitLab servers configured by earlier
       versions of this module.
  - Minor README updates
    - Clarify versions of GitLab this modules is known to work with and
      the steps a user can do to verify it works with a different version.
    - Remove OBE FIPS-mode failure
    - Update GitLab ticket URLs.
  - Allow herculesteam/augeasproviders_ssh < 5.0.0
  - Allow puppet/gitlab < 8.0.0