@@ -1,4 +1,12 @@
 #!/opt/puppetlabs/puppet/bin/ruby
+
+require 'fileutils'
+require 'optparse'
+require 'ostruct'
+require 'pty'
+require 'timeout'
+require 'English'
+
 # Script to change the GitLab 'root' user password
 #
 # 1. Loads up the gitlab-rails console, which puts the user into an IRB session.
@@ -7,21 +15,13 @@
 # 3. Writes a marker file to indicate the password has been set.
 #
 # See https://docs.gitlab.com/ee/security/reset_user_password.html
-
-require 'fileutils'
-require 'optparse'
-require 'ostruct'
-require 'pty'
-require 'timeout'
-
 class GitlabRootPasswordChanger
-
   PROGRAM_NAME = File.basename(__FILE__)
-  DEFAULT_LOAD_TIMEOUT = 300  # loading gitlab-rails console can take a long time
-  GITLAB_CTL_EXE = '/bin/gitlab-ctl'
-  GITLAB_CONSOLE_EXE = '/bin/gitlab-rails'
-  GITLAB_CONSOLE_COMMAND = "#{GITLAB_CONSOLE_EXE} console -e production"
-  MARKER_FILE = '/etc/gitlab/.root_password_set'
+  DEFAULT_LOAD_TIMEOUT = 300 # loading gitlab-rails console can take a long time
+  GITLAB_CTL_EXE = '/bin/gitlab-ctl'.freeze
+  GITLAB_CONSOLE_EXE = '/bin/gitlab-rails'.freeze
+  GITLAB_CONSOLE_COMMAND = "#{GITLAB_CONSOLE_EXE} console -e production".freeze
+  MARKER_FILE = '/etc/gitlab/.root_password_set'.freeze
 
   def initialize
     @options = OpenStruct.new
@@ -37,7 +37,7 @@ class GitlabRootPasswordChanger
   # Parse and validate command line options and arguments
   # @param args Array of command line arguments
   def parse_command_line(args)
-   all_opts = OptionParser.new do |opts|
+    all_opts = OptionParser.new do |opts|
       opts.banner = "Usage: #{PROGRAM_NAME} [OPTIONS] PASSWORD"
       opts.separator ''
 
@@ -48,7 +48,7 @@ class GitlabRootPasswordChanger
         'Timeout in seconds to wait for',
         'gitlab-rails console to load',
         'and process the change.',
-        "Defaults to #{DEFAULT_LOAD_TIMEOUT} seconds."
+        "Defaults to #{DEFAULT_LOAD_TIMEOUT} seconds.",
       ) do |timeout|
         @options.load_timeout = timeout
       end
@@ -56,7 +56,7 @@ class GitlabRootPasswordChanger
       opts.on(
         '-v',
         '--verbose',
-        'Print out debug info when processing.'
+        'Print out debug info when processing.',
       ) do
         @options.debug = true
       end
@@ -64,7 +64,7 @@ class GitlabRootPasswordChanger
       opts.on(
         '-h',
         '--help',
-        'Help Message'
+        'Help Message',
       ) do
         puts opts
         @options.help_requested = true
@@ -73,12 +73,11 @@ class GitlabRootPasswordChanger
 
     all_opts.parse!(args)
 
-    unless @options.help_requested
-      fail('ERROR: You must specify the password to set') if (ARGV.length < 1)
+    return if @options.help_requested
+    raise('ERROR: You must specify the password to set') if ARGV.empty?
 
-      @options.password = ARGV[0]
-      fail('ERROR: Password cannot be empty') if @options.password.strip.empty?
-    end
+    @options.password = ARGV[0]
+    raise('ERROR: Password cannot be empty') if @options.password.strip.empty?
   end
 
   # Parse the command line and the set the root password using the gitlab-rails
@@ -132,19 +131,19 @@ class GitlabRootPasswordChanger
     debug("Loading gitlab-rails console and executing change (this can take some time)...\n")
 
     # Password will be wrapped in double quotes within a single-quoted bash string.
-    safe_password = @options.password.gsub(/"/,'\\"')
+    safe_password = @options.password.gsub('"', '\\"')
     gitlab_ruby_commands = [
       'user = User.where(username: "root")[0]',
       "user.password = \"#{safe_password}\"",
       "user.password_confirmation = \"#{safe_password}\"",
-      'user.save!'
+      'user.save!',
     ].join('; ')
 
     command = "echo '#{gitlab_ruby_commands}' | #{GITLAB_CONSOLE_COMMAND}"
     debug("Executing: #{command}\n")
 
     begin
-      Timeout::timeout(@options.load_timeout) do
+      Timeout.timeout(@options.load_timeout) do
         console_out = `#{command} 2>&1`
         debug(console_out)
 
@@ -156,7 +155,7 @@ class GitlabRootPasswordChanger
 
         lines = console_out.split("\n").delete_if { |line| line.empty? }
 
-        if lines.last !~ /^true$/
+        unless %r{^true$}.match?(lines.last)
           raise('Password set operation failed.')
         end
       end
@@ -170,8 +169,10 @@ class GitlabRootPasswordChanger
     debug("Writing marker file #{MARKER_FILE}\n")
     FileUtils.touch(MARKER_FILE)
 
-    return 0
-
+    0
+  # rubocop:disable Lint/RescueException
+  # Disabling this cop for the moment as I don't recall why this was set
+  # so generically.
   rescue Exception => e
     err_msg = "\nFAILED to set GitLab root password"
     err_msg += ":\n  #{e.message}" unless e.message.strip.empty?
@@ -185,8 +186,9 @@ class GitlabRootPasswordChanger
     end
 
     warn(err_msg)
-    return 1
+    1
   end
+  # rubocop:enable Lint/RescueException
 
   # Verifies that the commands and services required
   def verify_gitlab_running
@@ -201,8 +203,8 @@ class GitlabRootPasswordChanger
     # If the postgresql GitLab process is not running, we can't bring up a
     # gitlab-rails console.
     status = `#{GITLAB_CTL_EXE} status`.split("\n")
-    pg_status = status.select {|entry| entry.include?('postgresql')}
-    exit_code = $?.exitstatus
+    pg_status = status.select { |entry| entry.include?('postgresql') }
+    $CHILD_STATUS.exitstatus
 
     unless pg_status.empty?
       if pg_status[0].start_with?('down')
@@ -213,17 +215,14 @@ class GitlabRootPasswordChanger
     # Just in case the GitLab internals change and some other process is essential
     # for the gitlab-rails console, warn if any other GitLab process is not up.
     bad_status = status.select { |entry| entry.start_with?('down') }
-    unless bad_status.empty?
-      warn("WARNING: GitLab is not completely running:\n#{bad_status.join("\n")}")
-    end
+    return if bad_status.empty?
+    warn("WARNING: GitLab is not completely running:\n#{bad_status.join("\n")}")
   end
-
 end
 
 ################################################################################
 
-if __FILE__ == $0
+if __FILE__ == $PROGRAM_NAME
   helper = GitlabRootPasswordChanger.new
   exit helper.run(ARGV)
 end
-
