@@ -2,12 +2,12 @@ require 'helpers/curl_ssl_cmd'
 
 shared_examples_for 'a GitLab web service' do |gitlab_signin_url, options|
   it 'serves GitLab web content to local client' do
-    _sleep   = ENV['BEAKER_gitlab_sleep'] || options.fetch(:gitlab_sleep, 30)
-    _retries = ENV['BEAKER_gitlab_retries'] || options.fetch(:gitlab_retries, 6)
-    _delay   = ENV['BEAKER_gitlab_retry_delay'] || options.fetch(:gitlab_retry_delay, 15)
+    opt__sleep   = ENV['BEAKER_gitlab_sleep'] || options.fetch(:gitlab_sleep, 30)
+    opt__retries = ENV['BEAKER_gitlab_retries'] || options.fetch(:gitlab_retries, 6)
+    # opt__delay   = ENV['BEAKER_gitlab_retry_delay'] || options.fetch(:gitlab_retry_delay, 15)
 
     # give the web interface time to start
-    shell "sleep #{_sleep}"
+    shell "sleep #{opt__sleep}"
 
     # FIXME: For some reason, --retry-delay option no longer works when run in
     # on(), even though the option is supported by curl and works when logged
@@ -17,9 +17,9 @@ shared_examples_for 'a GitLab web service' do |gitlab_signin_url, options|
     #
     #   curl: option --retry-delay: expected a positive numerical parameter
     #
-    # cmd = "#{curl_ssl_cmd(gitlab_server)} --retry #{_retries} --retry-delay #{_delay} -L " +
+    # cmd = "#{curl_ssl_cmd(gitlab_server)} --retry #{opt__retries} --retry-delay #{opt__delay} -L " +
     #  (gitlab_signin_url || "https://#{gitlab_server_fqdn}/users/sign_in")
-    cmd = "#{curl_ssl_cmd(gitlab_server)} --retry #{_retries} -L " +
+    cmd = "#{curl_ssl_cmd(gitlab_server)} --retry #{opt__retries} -L " +
           (gitlab_signin_url || "https://#{gitlab_server_fqdn}/users/sign_in")
 
     result = on(gitlab_server, cmd)
@@ -46,7 +46,7 @@ shared_examples_for 'a GitLab web service' do |gitlab_signin_url, options|
   end
 
   it 'denies web access from unknown clients' do
-    _curl_cmd = "#{curl_ssl_cmd(denied_client)} -L #{gitlab_signin_url}"
+    curl_cmd = "#{curl_ssl_cmd(denied_client)} -L #{gitlab_signin_url}"
     if options.fetch(:firewall, true) == true
       # When the server's firewall is enabled, we expect curl to *fail*
       #
@@ -58,10 +58,10 @@ shared_examples_for 'a GitLab web service' do |gitlab_signin_url, options|
       #  Both exit codes have been encountered during testing, and I think it
       #  depends on the whether the host system's network stack has been locked
       #  down (ala SIMP) or not.
-      on(denied_client, _curl_cmd, acceptable_exit_codes: [7, 28])
+      on(denied_client, curl_cmd, acceptable_exit_codes: [7, 28])
     else
       # Without a firewall, the web server should respond with a 403
-      result = on(denied_client, _curl_cmd)
+      result = on(denied_client, curl_cmd)
       expect(result.stdout).to match(%r{403 Forbidden})
     end
   end
