@@ -1,3 +1,6 @@
+* Tue Jun 10 2025 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.13.1
+- Fix rubocop issues
+
 * Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 0.13.0
 - [puppetsync] Update module dependencies to support simp-iptables 7.x
 
